layout mobile version

--- a/index.html
+++ b/index.html
@@ -24,27 +24,29 @@
     </section>
 
     <article class="supervisor">
-      <h3 class="supervisor__title"></h3>
+      <h3 class="supervisor__title">Supervisor</h3>
       <p class="supervisor__paragraph">Monitors activity to identify project roadblocks</p>
+      <img class="supervisor__image"src="./images/icon-supervisor.svg" alt="lupa">
     </article>
 
     <article class="teamBuilder">
-      <h3 class="teamBuilder__title"></h3>
+      <h3 class="teamBuilder__title">Team Builder</h3>
       <p class="teamBuilder__paragraph">
         Scans our talent network to create the optimal team for your project
       </p>
+      <img class="teamBuilder__image"src="./images/icon-team-builder.svg" alt="casa">
     </article>
 
     <article class="karma">
       <h3 class="karma__title">Karma</h3>
-      <p class="karma__subtitle">Regularly evaluates our talent to ensure quality</p>
+      <p class="karma__paragraph">Regularly evaluates our talent to ensure quality</p>
+      <img class="karma__image"src="./images/icon-karma.svg" alt="bombilla">
     </article>
 
     <article class="calculator">
       <h3 class="calculator__title">Calculator</h3>
-      <p class="calculator__subtitle">Uses data from past projects to provide better delivery estimates</p>
+      <p class="calculator__paragraph">Uses data from past projects to provide better delivery estimates</p>
+      <img class="calculator__image"src="./images/icon-calculator.svg" alt="calculadora">
     </article>
-
- 
   </body>
 </html>
