--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         points to ensure that your project is successful
       </p>
     </section>
-
+    
+<div class="wrapper">
     <article class="supervisor">
       <h3 class="supervisor__title">Supervisor</h3>
       <p class="supervisor__paragraph">Monitors activity to identify project roadblocks</p>
@@ -48,5 +49,6 @@
       <p class="calculator__paragraph">Uses data from past projects to provide better delivery estimates</p>
       <img class="calculator__image"src="./images/icon-calculator.svg" alt="calculadora">
     </article>
+  </div>
   </body>
 </html>
