--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="./images/emoji.jpg"
     />
     <link rel="stylesheet" href="./styles/styles.css">
     <title>Frontend Mentor | Four card feature section</title>
